Updated readme & docker-compose

--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     image: prom/prometheus:latest
     volumes:
       - type: bind
-        source: ./etc/prom.yaml
-        target: /etc/prom.yaml
+        source: ./etc/prometheus.yaml
+        target: /etc/prometheus.yaml
     entrypoint:
-      - /bin/prom
-      - --config.file=/etc/prom.yaml
+      - /bin/prometheus
+      - --config.file=/etc/prometheus.yaml
     ports:
       - "9090:9090"
 
