--- a/deploy/docker-compose/etc/prometheus.yaml
+++ b/deploy/docker-compose/etc/prometheus.yaml
@@ -3,7 +3,7 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'prom'
+  - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
   - job_name: 'docker-hub-limit'
