--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,14 @@ jobs:
         with:
           go-version: '1.20'
 
-      - uses: docker/setup-qemu-action@v2 # v2
+      - name: Setup Qemu
+        uses: docker/setup-qemu-action@v2 # v2
 
-      - uses: docker/setup-buildx-action@v2 # v2
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v2 # v2
      
       - name: Docker login GHCR
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
