--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,8 +4,9 @@ before:
   hooks:
     - go mod tidy
 gomod:
-  proxy: true
-  
+  proxy: false
+
+
 builds:
 - main: ./cmd/drl-exporter/main.go
   env:
